<resources>
    <string name="app_name">One Way</string>
    <string name="all">TODO</string>
    <string name="name">Lago de Coatepeque</string>
    <string name="ubication">Santa Ana</string>
    <string name="title_activity_main">One Way</string>
    <string name="subtitle_activity_main">2020</string>
    <string name="title_activity_add">Nuevo Lugar Turistico</string>
    <string name="title_activity_add_notes">Nueva Nota de Viaje</string>
    <string name="title_activity_edit">Datos del Lugar</string>
    <string name="spinner_form">Selecciona el tipo de lugar</string>
    <string name="name_form">Nombre</string>
    <string name="date_form">Ubicación</string>
    <string name="date_form_notes">Fecha</string>
    <string name="url_form">Imagen</string>
    <string name="buscar">Busqueda</string>
    <string name="revision">Revisiones pendientes</string>
    <string name="revision2">Publicaciones sobre sitios turísticos pendientes de revisión</string>
    <string name="youapp">Tu APP de turismo</string>
    <string name="places">Ver lugares</string>
    <string name="Cerrar">Cerrar sesión</string>
    <string name="saludo">Saz, esta es tu pantalla de inicio</string>
    <string name="saludo2">Administrador, esta es su pantalla de inicio</string>
    <string name="Indicaciones">Podrás volver acá si presionas el logo en la parte superior de la pantalla</string>
    <string name="description_form">Descripción</string>
    <string name="save">Guardar</string>
    <string name="incoming">Estamos Trabajando en ello</string>
    <string name="notes">Notas de Viaje</string>
    <string name="description">Lago de coatepeque</string>
    <string name="Name_APP">OneWay</string>
    <string name="Name">Nombre completo</string>
    <string name="type">Categoría:</string>
    <string name="imagen">Suba una imagen</string>
    <string name="categoria1">Playas</string>
    <string name="categoria2">Centros Comerciales</string>
    <string name="categoria3">Centros Turísticos</string>
    <string name="categoria4">Lagos</string>
    <string name="favoritos">Mis lugares favoritos</string>
    <string name="categoria">Categorias</string>
    <string name="title_active_login">Inicio de sesión</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="namecomplete">Nombre completo</string>
    <string name="email">Correo</string>
    <string name="login">Iniciar sesión</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Registrarse</string>
    <string name="text_signup">¿No tienes cuenta?</string>
    <string name="link_signup">Registro</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="reviewplaces">Reseñas del lugar</string>
    <string name="addreviewplaces">Agrega tu reseña del lugar</string>
    <string name="review_form">Ingresa tu reseña</string>
    <string name="add_review">Agregar reseña</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
</resources>