<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeAdmin">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/all"
            app:srcCompat="@drawable/logo"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/youapp"
            android:textColor="@color/black"
            android:textSize="40dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/txtsaludo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"

            android:text="@string/saludo2"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvinformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/Indicaciones"
            android:textColor="@color/black"
            android:textSize="24sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonplaces"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/ic_buttom4"
            android:drawableStart="@drawable/avion"
            android:drawableLeft="@drawable/avion"
            android:gravity="center"
            android:paddingLeft="64dp"

            android:paddingRight="64dp"
            android:text="@string/places"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonsignout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/ic_buttom3"
            android:drawableStart="@drawable/cerrar"
            android:drawableLeft="@drawable/cerrar"
            android:gravity="center"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:text="@string/Cerrar"
            android:textColor="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>