<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".PlacesDetails">


    <ImageView
        android:id="@+id/posterImgeView"
        android:layout_width="fill_parent"
        android:layout_height="425dp"
        android:contentDescription="@string/all"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/lago"
        tools:ignore="MissingConstraints" />



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="361dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="180dp"
                    android:layout_marginRight="180dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/skyblue"
                    android:textSize="24sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="361dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/ubication"
                    android:textColor="@color/grey2"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/description"
                    android:textColor="@color/purple_500"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/typeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/type"
                    android:textColor="@color/purple_500"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/reviewaddtext"
                    android:layout_width="361dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="180dp"
                    android:layout_marginRight="180dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:text="@string/addreviewplaces"
                    android:textColor="@color/skyblue"
                    android:textSize="24sp"
                    android:textStyle="bold" />



                <EditText
                    android:id="@+id/ReviewEditText"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@+id/descriptionTextView"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:autofillHints="@string/description_form"
                    android:background="@drawable/ic_field"
                    android:ems="255"
                    android:gravity="clip_vertical"
                    android:hint="@string/review_form"
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:maxLines="12"
                    android:minLines="6"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:textCursorDrawable="@null" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/AddReviewButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="70dp"
                    android:background="@drawable/ic_buttom"
                    android:paddingLeft="64dp"
                    android:paddingRight="64dp"
                    android:text="@string/add_review"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/reviewtext"
                    android:layout_width="361dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="180dp"
                    android:layout_marginRight="180dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:text="@string/reviewplaces"
                    android:textColor="@color/skyblue"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="El sitio aún no tiene reseñas."
                    android:textSize="24dp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/reviewtext"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintVertical_bias="0.0"
                    tools:context=".PlacesDetails"
                    tools:listitem="@layout/list_review" />

            </LinearLayout>




        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_place_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"

                android:contentDescription="@string/all"
                app:srcCompat="@drawable/ic_favorite_star_border"

                tools:ignore="VectorDrawableCompat" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>